--- a/package.json
+++ b/package.json
@@ -12,20 +12,11 @@
     "@mui/material": "^5.14.7",
     "@react-three/drei": "^9.80.9",
     "@react-three/fiber": "^8.13.7",
-    "@react-three/postprocessing": "^2.15.1",
     "@reacticons/ionicons": "^7.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.21",
-    "@vitejs/plugin-react": "^4.0.4",
-    "framer-motion": "^10.16.1",
     "howler": "^2.2.3",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ionicons": "^4.2.1",
-    "react-particles": "^2.12.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
@@ -33,8 +24,7 @@
     "styled-components": "^6.0.7",
     "three": "^0.156.0",
     "tsparticles-slim": "^2.12.0",
-    "typewriter-effect": "^2.20.1",
-    "web-vitals": "^2.1.4"
+    "typewriter-effect": "^2.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "vite": "^4.4.9"
+    "gh-pages": "^6.0.0"
   }
 }
